--- a/RememberMe/app/src/main/res/layout/widget.xml
+++ b/RememberMe/app/src/main/res/layout/widget.xml
@@ -21,6 +21,7 @@
         android:gravity="center"
         android:fontFamily="sans-serif-condensed"
         android:textSize="12sp"
+        android:textColor="@android:color/white"
         />
 
 </LinearLayout>
