--- a/RememberMe/app/src/main/res/values/colors.xml
+++ b/RememberMe/app/src/main/res/values/colors.xml
@@ -38,6 +38,7 @@
     <color name="green100">#C8E6C9</color>
     <color name="green200">#A5D6A7</color>
     <color name="greenA400">#00E676</color>
+    <color name="greenA700">#00C853</color>
 
     <!--<color name="yellow100">#FFF9C4</color>-->
     <!--<color name="yellow200">#FFF59D</color>-->
