--- a/RememberMe/app/src/main/res/layout/fragment_main.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_main.xml
@@ -22,16 +22,15 @@
         <android.support.v7.widget.GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             app:columnCount="2">
 
             <TextView
                 app:layout_columnWeight="1"
-                app:layout_gravity="left"
                 app:layout_row="0"
                 app:layout_column="0"
                 style="@style/LabelText"
                 android:text="@string/current_box"
+                android:contentDescription="@string/current_box"
                 android:layout_marginBottom="16dp"
                 />
 
@@ -42,15 +41,16 @@
                 android:gravity="center_vertical"
                 app:layout_row="0"
                 app:layout_column="1"
+                android:contentDescription="@string/select_current_box"
                 />
 
             <TextView
                 app:layout_columnWeight="1"
-                app:layout_gravity="left"
                 app:layout_row="2"
                 app:layout_column="0"
                 style="@style/LabelText"
                 android:text="@string/foreign_language"
+                android:contentDescription="@string/foreign_language"
                 android:layout_marginBottom="8dp"
                 />
 
@@ -60,15 +60,16 @@
                 app:layout_gravity="fill_horizontal"
                 app:layout_row="2"
                 app:layout_column="1"
+                android:contentDescription="@string/select_foreign_language"
                 />
 
             <TextView
                 app:layout_columnWeight="1"
-                app:layout_gravity="left"
                 app:layout_row="3"
                 app:layout_column="0"
                 style="@style/LabelText"
                 android:text="@string/native_language"
+                android:contentDescription="@string/native_language"
                 android:layout_marginBottom="8dp"
                 />
 
@@ -78,15 +79,16 @@
                 app:layout_gravity="fill_horizontal"
                 app:layout_row="3"
                 app:layout_column="1"
+                android:contentDescription="@string/select_native_language"
                 />
 
             <TextView
                 app:layout_columnWeight="1"
-                app:layout_gravity="left"
                 app:layout_row="4"
                 app:layout_column="0"
                 style="@style/LabelText"
                 android:text="@string/translation_direction"
+                android:contentDescription="@string/translation_direction"
                 android:layout_marginBottom="8dp"
                 />
 
@@ -96,6 +98,7 @@
                 app:layout_gravity="fill_horizontal"
                 app:layout_row="4"
                 app:layout_column="1"
+                android:contentDescription="@string/select_translation_direction"
                 />
 
         </android.support.v7.widget.GridLayout>
@@ -109,43 +112,42 @@
             android:id="@+id/vocabularyBoxOverviewTable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity=""
             android:stretchColumns="*">
 
             <!-- header row -->
             <TableRow android:background="@color/colorTableHeader" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="@string/compartment" />
-                <TextView style="@style/DefaultText" android:text="@string/words" />
-                <TextView style="@style/DefaultText" android:text="@string/repeated" />
+                <TextView style="@style/DefaultText" android:text="@string/compartment" android:contentDescription="@string/compartment" />
+                <TextView style="@style/DefaultText" android:text="@string/words" android:contentDescription="@string/words" />
+                <TextView style="@style/DefaultText" android:text="@string/repeated" android:contentDescription="@string/repeated" />
             </TableRow>
 
             <TableRow android:id="@+id/overviewTableRow1" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="1" />
+                <TextView style="@style/DefaultText" android:text="1" android:contentDescription="1" />
                 <TextView android:id="@+id/overviewWords1" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated1" style="@style/DefaultText" />
             </TableRow>
             <TableRow android:id="@+id/overviewTableRow2" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="2" />
+                <TextView style="@style/DefaultText" android:text="2" android:contentDescription="2" />
                 <TextView android:id="@+id/overviewWords2" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated2" style="@style/DefaultText" />
             </TableRow>
             <TableRow android:id="@+id/overviewTableRow3" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="3" />
+                <TextView style="@style/DefaultText" android:text="3" android:contentDescription="3" />
                 <TextView android:id="@+id/overviewWords3" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated3" style="@style/DefaultText" />
             </TableRow>
             <TableRow android:id="@+id/overviewTableRow4" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="4" />
+                <TextView style="@style/DefaultText" android:text="4" android:contentDescription="4" />
                 <TextView android:id="@+id/overviewWords4" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated4" style="@style/DefaultText" />
             </TableRow>
             <TableRow android:id="@+id/overviewTableRow5" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="5" />
+                <TextView style="@style/DefaultText" android:text="5" android:contentDescription="5" />
                 <TextView android:id="@+id/overviewWords5" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated5" style="@style/DefaultText" />
             </TableRow>
             <TableRow android:id="@+id/overviewTableRow6" android:paddingTop="8dp" android:paddingBottom="8dp">
-                <TextView style="@style/DefaultText" android:text="@string/learned" />
+                <TextView style="@style/DefaultText" android:text="@string/learned" android:contentDescription="@string/learned" />
                 <TextView android:id="@+id/overviewWords6" style="@style/DefaultText" />
                 <TextView android:id="@+id/overviewNotRepeated6" style="@style/DefaultText" />
             </TableRow>
@@ -163,6 +165,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/memorize_new_words"
+            android:contentDescription="@string/memorize_new_words"
             />
 
         <View
