--- a/RememberMe/app/src/main/res/layout/fragment_memorize.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_memorize.xml
@@ -24,7 +24,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_gravity="center"
             android:gravity="center">
 
@@ -34,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_chevron_left_36dp"
                 android:onClick="showPreviousWords"
+                android:contentDescription="@string/show_previous_words"
                 />
 
             <TextView
@@ -51,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_chevron_right_36dp"
                 android:onClick="showNextWords"
+                android:contentDescription="@string/show_next_words"
                 />
 
         </LinearLayout>
