--- a/RememberMe/app/src/main/res/layout/fragment_show_word.xml
+++ b/RememberMe/app/src/main/res/layout/fragment_show_word.xml
@@ -24,7 +24,9 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_gravity="center"
             android:gravity="center">
 
@@ -33,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_check_36dp"
+                android:contentDescription="@string/right"
                 />
 
             <TextView
@@ -49,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_chevron_right_36dp"
                 android:onClick="showNextWord"
+                android:contentDescription="@string/show_next_word"
                 />
 
         </LinearLayout>
